--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -37,6 +37,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0  200px;
 }
 nav >ul{
     display: flex;
@@ -55,4 +56,27 @@ nav a{
     font-size: 20px;
     font-weight: 400;
     color: #474747;
+}
+/* nav css end */
+/* header css start */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile_pic{
+    width:500px;
+}
+.banner .banner_greetings{
+    font-size: 45px;
+    font-weight: 600;
+    color:#474747;
+}
+.banner .banner_title{
+    font-size: 85px;
+    font-weight: 700;
+    color: #181818;
 }
