--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,25 +1,29 @@
 /* common css start */
-*{
+* {
     margin: 0;
     padding: 0;
     outline: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
-a{
+
+a {
     text-decoration: none;
     display: inline-block;
 }
-ul, ol{
-    list-style: none;
 
+ul,
+ol {
+    list-style: none;
 }
-.orange-letter{
-    color: #FD6E0A;
+
+.orange-letter {
+    color: #fd6e0a;
 }
-.btn-primary{
+
+.btn-primary {
     padding: 15px 35px;
-    background: #FD6E0A;
+    background: #fd6e0a;
     color: #fff;
     border: none;
     font-size: 20px;
@@ -30,53 +34,102 @@ ul, ol{
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
 }
+
+.section_title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
 /* common css end */
 
 /* nav css start */
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0  200px;
+    padding: 0 200px;
 }
-nav >ul{
+
+nav>ul {
     display: flex;
     margin-left: 20px;
     align-items: center;
 }
-nav li{
+
+nav li {
     margin-right: 50px;
 }
-.nav-title{
+
+.nav-title {
     font-size: 45px;
     font-weight: 800;
     color: #181818;
 }
-nav a{
+
+nav a {
     font-size: 20px;
     font-weight: 400;
     color: #474747;
 }
+
 /* nav css end */
 /* header css start */
-.header{
-    background-color: #FFF8F3;
+.header {
+    background-color: #fff8f3;
+    background-image: url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
+
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.banner .profile_pic{
-    width:500px;
+
+.banner .banner_text {
+    max-width: 500px;
 }
-.banner .banner_greetings{
+
+.banner .profile_pic {
+    width: 500px;
+}
+
+.banner .banner_greetings {
     font-size: 45px;
     font-weight: 600;
-    color:#474747;
+    color: #474747;
 }
-.banner .banner_title{
+
+.banner .banner_title {
     font-size: 85px;
     font-weight: 700;
     color: #181818;
+    margin: 5px 0 20px;
 }
+
+.banner .banner_description {
+    font-size: 14px;
+    font-weight: 400;
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+/* main css start */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #fff8f3;
+}
+
+.section_descrip {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+/* main css end */
