--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -119,10 +119,11 @@ nav a {
 }
 
 /* main css start */
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
 .about {
     padding: 155px;
     border-radius: 10px;
@@ -137,25 +138,104 @@ main{
     font-weight: 400;
     margin: 30px 0;
 }
-.about_info_container{
+
+.about_info_container {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
 }
-.about_info{
+
+.about_info {
     text-align: center;
 }
-.info_title{
-   font-size: 14px;
-   font-weight: 400;
-   color: #757575;
-}
-.info_description{
-color: #181818;
-font-size: 20px;
-font-weight: 500;
-}
-/* .what_i_do{
-    padding-bottom: 155px;
-} */
 
+.info_title {
+    font-size: 14px;
+    font-weight: 400;
+    color: #757575;
+}
+
+.info_description {
+    color: #181818;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+/* what i do part css start */
+#what_i_do_dscrip {
+    padding: 30px 130px;
+}
+
+.skills_container {
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 20px 5px rgba(0, 0, 0, 0.06);
+}
+
+.skill_title {
+    color: #181818;
+    font-size: 20px;
+    font-weight: 700;
+    margin: 30px 0;
+}
+
+.skill_paragraph {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* what i do part css end */
+/* Resume css part start */
+.resume {
+    padding: 130px;
+}
+
+.section_title {
+    margin-bottom: 100px;
+}
+
+.resume_container {
+    display: flex;
+    gap:40px;
+}
+
+.resume_column_title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.resume_item_title{
+color: #474747;
+font-size: 25px;
+font-weight: 700;
+}
+.resume_item_institute{
+    color:#757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 10px 0 25px;
+}
+.resume_item_description{
+    color:#757575;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+.download_cv{
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+}
+/* Resume css part end */
 /* main css end */
+/* footer css start */
+
+/* footer css end */
