--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -78,9 +78,9 @@ nav a {
 /* header css start */
 .header {
     background-color: #fff8f3;
-    background-image: url("../images/header_bg.png");
+    background-image: url("../images/header_bg.png"), url("../images/developer.png");
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 
 .banner {
@@ -197,13 +197,10 @@ main {
     padding: 130px;
 }
 
-.section_title {
-    margin-bottom: 100px;
-}
-
 .resume_container {
     display: flex;
-    gap:40px;
+    gap: 40px;
+    margin-top: 100px;
 }
 
 .resume_column_title {
@@ -212,30 +209,67 @@ main {
     font-weight: 700;
     margin-bottom: 30px;
 }
-.resume_item_title{
-color: #474747;
-font-size: 25px;
-font-weight: 700;
+
+.resume_item_title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
 }
-.resume_item_institute{
-    color:#757575;
+
+.resume_item_institute {
+    color: #757575;
     font-size: 20px;
     font-weight: 600;
     margin: 10px 0 25px;
 }
-.resume_item_description{
-    color:#757575;
+
+.resume_item_description {
+    color: #757575;
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 30px;
 }
-.download_cv{
+
+.download_cv {
     display: flex;
     justify-content: center;
     margin-top: 60px;
 }
+
 /* Resume css part end */
 /* main css end */
 /* footer css start */
+footer {
+    padding: 130px 250px;
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+}
+
+.footer_column {
+    width: 50%;
+}
+.contact{
+    margin-top: 30px;
+}
+
+.contact input[type="text"], .contact input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    border: 0;
+    border-radius: 5px;
+    background: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    color: #757575;
+}
+.social_link{
+    margin-top: 30px;
+}
+.social_link a{
+    margin-right: 24px;
+}
 
 /* footer css end */
